--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>CSS Snipper Saver</title>
 </head>
 <body>
-  <header class="site-header">
+<!--   <header class="site-header">
     <div class="wrap">
       <h1>CSS Snippet Saver</h1>
     </div>
@@ -17,7 +17,7 @@
   </div>
   <footer class="site-footer">
     <div class="wrap"></div>
-  </footer>
+  </footer> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular-route.min.js"></script>
