--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
   <title>CSS Snipper Saver</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,700">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
   <header class="site-header">
     <div class="wrap">
-      <h1>CSS Snippet Saver</h1>
+      <h1 class="site-title">CSS Snippet Saver</h1>
     </div>
   </header>
   <nav>
