Add footer message + styling

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
     </main>
   </div>
   <footer class="site-footer">
-    <div class="wrap"></div>
+    <div class="wrap">
+      <p>&copy; Nate Nault | HRR22</p>
+    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
